[package]
name        = "asciisavers"
version     = "0.2.4"
author      = "Coderspark"
description = "A small collection of ascii screensavers"
edition     = "2021"
license     = "GPL-3.0"
repository  = "https://github.com/coderspark/asciisavers"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
